--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,8 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "algorithm": "cpp",
+        "xtree": "cpp"
     }
 }
