added new functions, created a pause in between inputs and updated README file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,10 @@
         "xutility": "cpp",
         "map": "cpp",
         "algorithm": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "set": "cpp",
+        "chrono": "cpp",
+        "ratio": "cpp",
+        "thread": "cpp"
     }
 }
